<?xml version="1.0"?>
<package>
  <name>dji_sdk</name>
  <version>0.1.0</version>
  <description>ROS wrapper for DJI Onboard SDK. </description>

  <maintainer email="norman.li@dji.com">Phoenix</maintainer>
  <maintainer email="me@botao.hu">Botao Amber Hu</maintainer>

  <license>BSD</license>

  <url type="website">http://dev.dji.com/</url>

  <author email="me@botao.hu">Botao Amber Hu</author>
  <author email="norman.li@dji.com">Phoenix</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
