<?xml version="1.0"?>
<package>
  <name>dji_sdk_demo</name>
  <version>3.1.0</version>
  <description>Clients for demonstrating dji_sdk ROS package.</description>

  <maintainer email="norman.li@dji.com">Phoenix</maintainer>

  <license>BSD</license>

  <url type="website">http://dev.dji.com/</url>

  <author email="me@botao.hu">Botao Amber Hu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dji_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>dji_sdk</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
