<package>
  <name>dji_sdk_description</name>
  <version>0.1.0</version>
  <description>dji_sdk_desciption</description>

  <maintainer email="me@botao.hu">Botao Amber Hu</maintainer>

  <license>BSD</license>

  <author email="me@botao.hu">Botao Amber Hu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_plugins</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>hector_sensors_gazebo</build_depend>
  <build_depend>hector_quadrotor_gazebo_plugins</build_depend>
  <build_depend>message_to_tf</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>hector_sensors_gazebo</run_depend>
  <run_depend>hector_quadrotor_description</run_depend>
  <run_depend>hector_quadrotor_model</run_depend>
  <run_depend>hector_quadrotor_gazebo_plugins</run_depend>
  <run_depend>hector_quadrotor_controller_gazebo</run_depend>
  <run_depend>hector_quadrotor_pose_estimation</run_depend>
  <run_depend>hector_quadrotor_teleop</run_depend>
  <run_depend>hector_uav_msgs</run_depend>
  <run_depend>message_to_tf</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <!-- Dependencies needed only for running tests. -->

</package>
