<?xml version="1.0"?>
<package>
  <name>dji_sdk_lib</name>
  <version>3.1.0</version>
  <description>The dji_sdk_lib package</description>

  <maintainer email="norman.li@dji.com">Phoenix</maintainer>

  <license>BSD</license>

  <url type="website">http://dev.dji.com/</url>

  <author email="me@botao.hu">Botao Hu</author>  
  <author email="norman.li@dji.com">Phoenix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
