<?xml version="1.0"?>
<package>
  <name>dji_sdk_read_cam</name>
  <version>0.1.0</version>
  <description>The read_cam package</description>

  <maintainer email="norman.li@dji.com">Phoenix</maintainer>

  <license>BSD</license>

  <url type="website">http://dev.dji.com/</url>

  <author email="norman.li@dji.com">Phoenix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>

  </export>
</package>
