<?xml version="1.0"?>
<package>
  <name>dji_sdk_web_groundstation</name>
  <version>1.0.0</version>
  <description>The dji_sdk_web_groundstation package</description>

  <maintainer email="norman.li@dji.com">Phoenix</maintainer>

  <license>BSD</license>

  <url type="website">http://dev.dji.com/</url>

  <author email="norman.li@dji.com">Phoenix</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dji_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>
